--- a/server-side/package.json
+++ b/server-side/package.json
@@ -15,7 +15,9 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1",
+    "mongoose": "^8.4.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.3"
   }
 }
