--- a/client-side/package.json
+++ b/client-side/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "sweetalert2": "^11.11.1"
   },
