--- a/client-side/package.json
+++ b/client-side/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
+    "react-to-print": "^2.15.1",
     "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
