--- a/client-side/package.json
+++ b/client-side/package.json
@@ -18,6 +18,7 @@
     "datatables.net-dt": "^2.0.8",
     "framer-motion": "^11.2.12",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
