--- a/client-side/package.json
+++ b/client-side/package.json
@@ -25,12 +25,10 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.10.3",
     "react-loader-spinner": "^6.1.6",
-    "react-particles": "^2.12.2",
     "react-router-dom": "^6.23.1",
     "react-to-print": "^2.15.1",
     "sweetalert2": "^11.11.1",
-    "tailwindcss": "^3.4.4",
-    "tsparticles": "^3.5.0"
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
