--- a/client-side/package.json
+++ b/client-side/package.json
@@ -18,9 +18,12 @@
     "datatables.net-dt": "^2.0.8",
     "framer-motion": "^11.2.12",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
@@ -28,6 +31,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-to-print": "^2.15.1",
+    "styled-components": "^6.1.12",
     "sweetalert2": "^11.11.1",
     "tailwindcss": "^3.4.4"
   },
