--- a/client-side/package.json
+++ b/client-side/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "datatables.net": "^2.0.8",
     "datatables.net-dt": "^2.0.8",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.12",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
@@ -25,6 +26,7 @@
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
