feat [James]: added image

--- a/server-side/.env
+++ b/server-side/.env
@@ -1,2 +1,7 @@
 MONGODB_URI=mongodb+srv://jamesgenabio31:09083095890a@psits.hxpgzht.mongodb.net/?retryWrites=true&w=majority&appName=psits
 JWT_SECRET=Drngm4d5SHxw7hAY9eJNcpu6z8BfKbQZMV2sqEXa3PFLTWtkvC
+AWS_ACCESS_KEY_ID=AKIAQE43KHSSXXI7OG7I
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=ap-southeast-2
+AWS_BUCKET_NAME=psitsimagestorage
+
