--- a/client-side/package.json
+++ b/client-side/package.json
@@ -32,7 +32,9 @@
     "react-intersection-observer": "^9.10.3",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
     "react-to-print": "^2.15.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
     "sweetalert2": "^11.11.1",
     "tailwindcss": "^3.4.4"
