--- a/client-side/package.json
+++ b/client-side/package.json
@@ -37,6 +37,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
     "sweetalert2": "^11.11.1",
+    "swiper": "^11.1.8",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
