debug [James]: fix the allowed admin to accept and decline membership, changes the renewal from 20 to 50, deleted the export pdf and changes into export csv (Only in Membership History)

--- a/client-side/package.json
+++ b/client-side/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.12",
     "jquery": "^3.7.1",
+    "json-to-csv-export": "^3.0.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^4.0.0",
