--- a/server-side/package.json
+++ b/server-side/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-s3": "^3.620.0",
     "@google-cloud/storage": "^7.12.0",
     "aws-sdk": "^2.1664.0",
+    "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
