fix [James]: partial fix for merchandise

--- a/client-side/package.json
+++ b/client-side/package.json
@@ -17,8 +17,9 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "datatables.net": "^2.0.8",
-    "datatables.net-dt": "^2.0.8",
+    "datatables.net": "^2.1.4",
+    "datatables.net-dt": "^2.1.4",
+    "datatables.net-responsive": "^3.0.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.12",
     "jquery": "^3.7.1",
