--- a/client-side/package.json
+++ b/client-side/package.json
@@ -38,6 +38,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "react-tabs": "^6.0.2",
     "react-to-print": "^2.15.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
