--- a/client-side/package.json
+++ b/client-side/package.json
@@ -36,8 +36,8 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
-  
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
     "react-to-print": "^2.15.1",
