--- a/client-side/package.json
+++ b/client-side/package.json
@@ -37,10 +37,11 @@
     "react-intersection-observer": "^9.10.3",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
-  
     "react-slick": "^0.30.2",
+    "react-table": "^7.8.0",
     "react-tabs": "^6.0.2",
     "react-to-print": "^2.15.1",
+    "shadcn": "^2.0.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
     "sweetalert2": "^11.11.1",
