--- a/client-side/package.json
+++ b/client-side/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
     "datatables.net": "^2.1.4",
     "datatables.net-dt": "^2.1.4",
     "datatables.net-responsive": "^3.0.2",
@@ -29,6 +30,7 @@
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-datepicker": "^7.3.0",
