feat [James]: change reader to scanner

--- a/client-side/package.json
+++ b/client-side/package.json
@@ -1,68 +1,68 @@
 {
-  "name": "psits-web-react",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.2",
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@headlessui/react": "^2.1.2",
-    "autoprefixer": "^10.4.19",
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.4",
-    "datatables.net": "^2.1.4",
-    "datatables.net-dt": "^2.1.4",
-    "datatables.net-responsive": "^3.0.2",
-    "date-fns": "^3.6.0",
-    "framer-motion": "^11.2.12",
-    "jquery": "^3.7.1",
-    "json-to-csv-export": "^3.0.1",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
-    "jwt-decode": "^4.0.0",
-    "postcss": "^8.4.38",
-    "react": "^17.0.2",
-    "react-chartjs-2": "^5.2.0",
-    "react-csv": "^2.2.2",
-    "react-data-table-component": "^7.6.2",
-    "react-datepicker": "^7.3.0",
-    "react-dom": "^17.0.2",
-    "react-icons": "^5.3.0",
-    "react-intersection-observer": "^9.10.3",
-    "react-loader-spinner": "^6.1.6",
-    "react-modal": "^3.16.1",
-    "react-qr-code": "^2.0.15",
-    "react-qr-reader": "^3.0.0-beta-1",
-    "react-router-dom": "^6.23.1",
-    "react-slick": "^0.30.2",
-    "react-table": "^7.8.0",
-    "react-tabs": "^6.0.2",
-    "react-to-print": "^2.15.1",
-    "shadcn": "^2.0.3",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.12",
-    "sweetalert2": "^11.11.1",
-    "swiper": "^11.1.8",
-    "tailwindcss": "^3.4.4"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.12"
-  },
-  "proxy": "http://localhost/psits-web-react/server-side"
+	"name": "psits-web-react",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.5.2",
+		"@fortawesome/fontawesome-svg-core": "^6.7.1",
+		"@fortawesome/free-solid-svg-icons": "^6.6.0",
+		"@fortawesome/react-fontawesome": "^0.2.2",
+		"@headlessui/react": "^2.1.2",
+		"autoprefixer": "^10.4.19",
+		"axios": "^1.7.2",
+		"bootstrap": "^5.3.3",
+		"chart.js": "^4.4.4",
+		"datatables.net": "^2.1.4",
+		"datatables.net-dt": "^2.1.4",
+		"datatables.net-responsive": "^3.0.2",
+		"date-fns": "^3.6.0",
+		"framer-motion": "^11.2.12",
+		"jquery": "^3.7.1",
+		"json-to-csv-export": "^3.0.1",
+		"jspdf": "^2.5.1",
+		"jspdf-autotable": "^3.8.2",
+		"jwt-decode": "^4.0.0",
+		"postcss": "^8.4.38",
+		"qr-scanner": "^1.4.2",
+		"react": "^18.3.1",
+		"react-chartjs-2": "^5.2.0",
+		"react-csv": "^2.2.2",
+		"react-data-table-component": "^7.6.2",
+		"react-datepicker": "^7.3.0",
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.3.0",
+		"react-intersection-observer": "^9.10.3",
+		"react-loader-spinner": "^6.1.6",
+		"react-modal": "^3.16.1",
+		"react-qr-code": "^2.0.15",
+		"react-router-dom": "^6.23.1",
+		"react-slick": "^0.30.2",
+		"react-table": "^7.8.0",
+		"react-tabs": "^6.0.2",
+		"react-to-print": "^2.15.1",
+		"shadcn": "^2.0.3",
+		"slick-carousel": "^1.8.1",
+		"styled-components": "^6.1.12",
+		"sweetalert2": "^11.11.1",
+		"swiper": "^11.1.8",
+		"tailwindcss": "^3.4.4"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@vitejs/plugin-react": "^4.2.1",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.34.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"vite": "^5.2.12"
+	},
+	"proxy": "http://localhost/psits-web-react/server-side"
 }
