--- a/client-side/package.json
+++ b/client-side/package.json
@@ -31,6 +31,7 @@
 		"jwt-decode": "^4.0.0",
 		"postcss": "^8.4.38",
 		"qr-scanner": "^1.4.2",
+		"qrcode.react": "^4.2.0",
 		"react": "^18.3.1",
 		"react-chartjs-2": "^5.2.0",
 		"react-csv": "^2.2.2",
