Raffle UI Working but need redesign

--- a/client-side/package.json
+++ b/client-side/package.json
@@ -48,6 +48,7 @@
 		"react-table": "^7.8.0",
 		"react-tabs": "^6.0.2",
 		"react-to-print": "^2.15.1",
+		"react-toastify": "^11.0.3",
 		"shadcn": "^1.0.0",
 		"slick-carousel": "^1.8.1",
 		"styled-components": "^6.1.12",
