--- a/client-side/package.json
+++ b/client-side/package.json
@@ -15,6 +15,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@headlessui/react": "^2.1.2",
+		"@yudiel/react-qr-scanner": "^2.1.0",
 		"autoprefixer": "^10.4.19",
 		"axios": "^1.7.2",
 		"bootstrap": "^5.3.3",
