--- a/server-side/package.json
+++ b/server-side/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
