--- a/client-side/package.json
+++ b/client-side/package.json
@@ -19,6 +19,7 @@
 		"autoprefixer": "^10.4.19",
 		"axios": "^1.7.2",
 		"bootstrap": "^5.3.3",
+		"browser-image-compression": "^2.0.2",
 		"chart.js": "^4.4.4",
 		"datatables.net": "^2.1.4",
 		"datatables.net-dt": "^2.1.4",
