--- a/client-side/package.json
+++ b/client-side/package.json
@@ -36,6 +36,7 @@
 		"qrcode.react": "^4.2.0",
 		"react": "^18.3.1",
 		"react-chartjs-2": "^5.2.0",
+		"react-confetti": "^6.2.3",
 		"react-csv": "^2.2.2",
 		"react-data-table-component": "^7.6.2",
 		"react-datepicker": "^7.3.0",
