--- a/.github/workflows/client-side-pipeline.yml
+++ b/.github/workflows/client-side-pipeline.yml
@@ -42,3 +42,21 @@ jobs:
       - name: Deploy Project Artifacts to Vercel
         working-directory: client-side
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+
+  Deploy-Production:
+    name: Deploy Production
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Vercel CLI
+        working-directory: client-side
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        working-directory: client-side
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        working-directory: client-side
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        working-directory: client-side
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
