--- a/.github/workflows/client-side-pipeline.yml
+++ b/.github/workflows/client-side-pipeline.yml
@@ -54,8 +54,7 @@ jobs:
         working-directory: client-side
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: client-side
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --cwd client-side
 
   Deploy-Production:
     name: Deploy Production
@@ -76,5 +75,4 @@ jobs:
         working-directory: client-side
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: client-side
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} --cwd client-side
