Pipeline - Vercel Deployment (debug)

--- a/.github/workflows/client-side-pipeline.yml
+++ b/.github/workflows/client-side-pipeline.yml
@@ -53,8 +53,11 @@ jobs:
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
         working-directory: client-side
 
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --cwd client-side
+      - name: List directory contents
+        run: ls -R
+
+      #- name: Deploy Project Artifacts to Vercel
+      #  run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --cwd client-side
 
   Deploy-Production:
     name: Deploy Production
@@ -74,5 +77,8 @@ jobs:
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
         working-directory: client-side
 
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} --cwd client-side
+      - name: List directory contents
+        run: ls -R
+
+      #- name: Deploy Project Artifacts to Vercel
+      #  run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} --cwd client-side
