--- a/.github/workflows/client-side-pipeline.yml
+++ b/.github/workflows/client-side-pipeline.yml
@@ -51,9 +51,6 @@ jobs:
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: List directory contents
-        run: ls -R
-
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
 
@@ -69,13 +66,9 @@ jobs:
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: client-side
 
       - name: Build Project Artifacts
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }} --cwd client-side
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: List directory contents
-        run: ls -R
-
-      #- name: Deploy Project Artifacts to Vercel
-      #  run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} --cwd client-side
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
