--- a/.github/workflows/client-side-deployment-pipeline.yml
+++ b/.github/workflows/client-side-deployment-pipeline.yml
@@ -72,3 +72,24 @@ jobs:
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+  Release-Project:
+    name: Release Project
+    runs-on: ubuntu-latest
+    needs: Deploy-Preview
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: static-site
+      - name: Archive site content
+        uses: thedoctor0/zip-release@master
+        with:
+          filename: release-${{ github.run_number }}.zip
+      - name: Create Github Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release-${{ github.run_number }}
