--- a/client-side/package.json
+++ b/client-side/package.json
@@ -22,6 +22,7 @@
 		"bootstrap": "^5.3.3",
 		"browser-image-compression": "^2.0.2",
 		"chart.js": "^4.4.4",
+		"chartjs-plugin-datalabels": "^2.2.0",
 		"datatables.net": "^2.1.4",
 		"datatables.net-dt": "^2.1.4",
 		"datatables.net-responsive": "^3.0.2",
