--- a/client-side/package.json
+++ b/client-side/package.json
@@ -31,6 +31,7 @@
 		"jquery": "^3.7.1",
 		"json-to-csv-export": "^3.0.1",
 		"jwt-decode": "^4.0.0",
+		"ogl": "^1.0.11",
 		"postcss": "^8.4.38",
 		"qr-scanner": "^1.4.2",
 		"qrcode.react": "^4.2.0",
