--- a/server-side/package.json
+++ b/server-side/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.620.0",
     "@google-cloud/storage": "^7.12.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.1",
     "aws-sdk": "^2.1664.0",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
