refactor[James]: refactor merchandise routes and controller  in ts

--- a/server-side/package.json
+++ b/server-side/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.19",
     "@types/ejs": "^3.1.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "aws-sdk": "^2.1664.0",
     "axios": "^1.7.4",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^24.3.0",
     "cors": "^2.8.5",
     "nodemon": "^3.1.10",
