--- a/server-side/package.json
+++ b/server-side/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc",
-  "start": "node dist/index.ts",
+  "start": "node src/index.ts",
   "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
