feat [James]: added dist

--- a/server-side/package.json
+++ b/server-side/package.json
@@ -1,9 +1,10 @@
 {
   "name": "server-side",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
