--- a/server-side/package.json
+++ b/server-side/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
+    "dev": "nodemon",
     "build": "tsc",
-
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
-
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
